# OMX-ALERTD

./: README.md  alertd-omx.toml.example  pyproject.toml
src/omx_alertd/: __init__.py  actions.py  cli.py  config.py  nws.py
systemd/: alertd-omx.service
