[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alertd-omx"
version = "0.1.0"
description = "NOAA/NWS desktop alert daemon for Omarchy"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "omx-alertd contributors" }]
license = "MIT"

[project.scripts]
alertd-omx = "omx_alertd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
